# linkstowr-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  init_db.sh
.github/workflows/: ci.yml  docker.yml  fly.yml
configuration/: base.yaml  production.yaml
db/: schema.sql
migrations/definitions/: _initial.json
schemas/: link.surql  script_migration.surql  token.surql  user.surql
src/: app.rs  auth.rs  configuration.rs  ctx.rs  error.rs  lib.rs  log.rs  main.rs  prefixed_api_key.rs  telemetry.rs  types.rs
src/middlewares/: auth.rs
src/routes/: auth.rs  health_check.rs  link_routes.rs  mod.rs  token.rs
tests/: api_tests.rs  health_check.rs
