[package]
name = "linkshelf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "linkshelf"

[dependencies]
# Axum
axum = "0.6.18"
axum-auth = "0.4.0"
tower-http = { version = "0.4", features = ["fs", "cors"] }
tower-cookies = "0.9"
# Serde / json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# Shuttle.rs
shuttle-axum = "0.21.0"
shuttle-runtime = "0.21.0"
shuttle-secrets = "0.21.0"
tokio = "1.28.2"
# DB
surrealdb = { version = "1.0.0-beta.9", features = ["protocol-http"] }
# Extras
argon2 = "0.5.0"
async-trait = "0.1"
chrono = "0.4.26"
jsonwebtoken = "8.3.0"
lazy-regex = "2"
strum_macros = "0.24"
uuid = "1.3.3"
# Prefixed API Key deps
bs58 = "0.4.0"
hex = "0.4.3"
rand = "0.8.5"
sha2 = "0.10.2"
