[package]
name = "linkshelf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "linkshelf"

[dependencies]
# Axum
axum = "0.6.16"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["fs", "cors"] }
# Serde / json
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
serde_with = "3"
# DB
surrealdb = { version = "1.0.0-beta.9", features = ["protocol-http"] }
# Prefixed API Key deps
bs58 = "0.4.0"
hex = "0.4.3"
rand = "0.8.5"
sha2 = "0.10.2"
# Tracing
axum-tracing-opentelemetry = "0.12.0"
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3", features = [
  "registry",
  "env-filter",
  "fmt",
  "json",
] }
# OpenTelemetry
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-http = "0.9.0"
opentelemetry-otlp = { version = "0.12.0", features = [
  "http-proto",
  "reqwest-client",
  "reqwest-rustls",
] }
opentelemetry-semantic-conventions = "0.11.0"
# Extras
argon2 = "0.5.0"
async-trait = "0.1"
chrono = "0.4.26"
config = "0.13"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
lazy-regex = "2"
strum_macros = "0.24"
uuid = "1.3.3"
